@@ -1,3 +1,7 @@
+SimpleComplex/Database 1.x, 2018-04-22
+--------------------------------------
+- MS SQL client info.
+
 SimpleComplex/Database 1.x, 2018-04-21
 --------------------------------------
 - Check parameter types.
